# rusty18n

./: .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix
example/: Cargo.toml
example/src/: main.rs
example/src/i18n/: en.rs  mod.rs  pt.rs  ptbr.rs
rusty18n_macros/: Cargo.toml
rusty18n_macros/src/: lib.rs
src/: core.rs  lib.rs  macros.rs  reflect.rs
src/core/: access.rs  dynamic.rs  error.rs  mod.rs  resolved.rs  resource.rs  store.rs  traits.rs
tests/: bevy_reflect.rs  compile_templates.rs  dynamic_loading.rs  dynamic_templates.rs  errors.rs  nested_syntax.rs
tests/ui/: fail_empty_placeholder.rs  fail_empty_placeholder.stderr  fail_format_specifier.rs  fail_format_specifier.stderr  fail_indexed_placeholder.rs  fail_indexed_placeholder.stderr  fail_unmatched_close.rs  fail_unmatched_close.stderr  fail_unmatched_open.rs  fail_unmatched_open.stderr  pass_templates.rs
update/src/: lib.rs
