[package]
name = "rusty18n"
version = "0.2.4"
edition = "2021"

repository = "https://github.com/o-dasher/rusty18n.git"
description = "A simply yet efficient i18n solution for Rust."
license = "MIT"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy_reflect = {version="0.12.1", optional=true}
derive_more = { version = "1", features = ["as_ref", "deref", "display"] }
impl-trait-for-tuples = "0.2"
paste = "1.0.15"
rusty18n_macros = { path = "rusty18n_macros" }
thiserror = "1"

[workspace]
members = [
    "example",
    "rusty18n_macros",
]

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
