[package]
name = "rusty18n"
version = "0.2.7"
edition = "2024"
rust-version = "1.85"

repository = "https://github.com/o-dasher/rusty18n.git"
description = "A simply yet efficient i18n solution for Rust."
license = "MIT"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy_reflect = {version="0.12.1", optional=true}
deep-struct-update = "0.1"
derive_more = { version = "1", features = ["as_ref", "deref", "display"] }
impl-trait-for-tuples = "0.2"
paste = "1.0.15"
rusty18n_macros = { path = "rusty18n_macros", version = "0.1.0" }
structstruck = "0.5"

[workspace]
members = [
    "example",
    "rusty18n_macros",
]

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
