[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deep-struct-update = "0.1.0"
merge-struct = "0.1.0"
nestruct = "0.1.0"
paste = "1.0.15"
rusty18n = { path = "../" }
serde = { version = "1.0.193", features = ["serde_derive"] }
