[package]
name = "example"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_reflect = "0.12.1"
merge-struct = "0.1.0"
paste = "1.0.15"
rusty18n = { path = "../" }
serde = { version = "1.0.193", features = ["serde_derive"] }
