[package]
name = "rusty18n_macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/o-dasher/rusty18n.git"
description = "Internal proc macros for rusty18n."
license = "MIT"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.98"
winnow = "0.7.13"
